[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/Goblin.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 110.0
height = 5.7796

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 111.052, 33.2496 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 500, 290 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -69.1475, -10.7011 )
scale = Vector2( 2.30672, 1.53237 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.950012 )
shape = SubResource( 1 )

[node name="RayR" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 125, 0 )

[node name="RayL" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -125, 0 )

[node name="RayG" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 150 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.95001, -153.75 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
